# R-TYPE

./: $null  .clang-format  .clang-tidy  .gitignore  .gitignore copy  404.html  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README copy.md  README.md  RECAP_ARCHITECTURE.md  client.cpp  conanfile.py  conanfile.txt  index.html  mkdocs.yml  netlify.toml  r-type.bat  r-type.sh  requirements.txt  settings.ini  tree.txt
admin-client/: CMakeLists.txt  README.md
admin-client/include/: AdminClient.hpp  AdminUI.hpp  LoginScreen.hpp
admin-client/src/: AdminClient.cpp  AdminUI.cpp  LoginScreen.cpp  main.cpp
client/: CMakeLists.txt
client/accessibility/: CMakeLists.txt
client/accessibility/include/: AccessibilityManager.hpp  ColorBlindnessMode.hpp  ColorTransform.hpp  ProjectileShapeRenderer.hpp
client/accessibility/src/: AccessibilityManager.cpp  ColorTransform.cpp  ProjectileShapeRenderer.cpp
client/include/: FontManager.hpp  Settings.hpp  texture_manager.hpp
client/include/common/: Common.hpp  SafeQueue.hpp  Settings.hpp
client/include/core/: SettingsManager.hpp
client/include/game/: Entity.hpp  Game.hpp
client/include/input/: Input.hpp  InputHandler.hpp  InputKey.hpp
client/include/level/: CustomLevelConfig.hpp  CustomLevelLoader.hpp
client/include/managers/: AudioManager.hpp  EffectsManager.hpp  FontManager.hpp  Managers.hpp  TextureManager.hpp
client/include/network/: Messages.hpp  Network.hpp  NetworkClient.hpp
client/include/rendering/: ColorBlindShader.hpp  GameRenderer.hpp  HUDRenderer.hpp  LaserParticleSystem.hpp  OverlayRenderer.hpp  Rendering.hpp  SerpentEffectsSystem.hpp  SerpentLaserSystem.hpp
client/include/states/: GameState.hpp  IState.hpp  LobbyListState.hpp  LobbyState.hpp  MenuState.hpp  SettingsState.hpp  StateManager.hpp
client/include/ui/: MenuComponents.hpp  SettingsPanel.hpp
client/src/: AudioManager.cpp  AudioManager.hpp  EffectsManager.cpp  EffectsManager.hpp  Entity.hpp  Game.hpp  Messages.hpp  NetworkClient.hpp  SafeQueue.hpp  TextureManager.hpp  game.cpp  inputKey.hpp  main.cpp  main_menu.cpp  networkClient.cpp
client/src/core/: FontManager.cpp  SettingsManager.cpp
client/src/game/: Game.cpp
client/src/input/: InputHandler.cpp
client/src/level/: CustomLevelLoader.cpp
client/src/managers/: AudioManager.cpp  EffectsManager.cpp  FontManager.cpp  TextureManager.cpp
client/src/network/: NetworkClient.cpp
client/src/rendering/: ColorBlindShader.cpp  GameRenderer.cpp  HUDRenderer.cpp  LaserParticleSystem.cpp  OverlayRenderer.cpp  SerpentEffectsSystem.cpp  SerpentLaserSystem.cpp
client/src/states/: GameState.cpp  LobbyListState.cpp  LobbyState.cpp  MenuState.cpp  SettingsState.cpp  StateManager.cpp
client/src/ui/: MenuComponents.cpp  SettingsPanel.cpp
engine/: CMakeLists.txt  README.md
engine/core/: GameEngine.cpp  GameEngine.hpp  ISystem.hpp  SystemManager.cpp  SystemManager.hpp
engine/ecs/: CMakeLists.txt  components.hpp  entity.hpp  indexed_zipper.hpp  sparse_array.hpp  systems.hpp  zipper.hpp  zipper_iterator.hpp
game/: CMakeLists.txt
game-lib/: CMakeLists.txt
game-lib/include/components/: game_components.hpp  logic_components.hpp
game-lib/include/entities/: boss_factory.hpp  enemy_factory.hpp  explosion_factory.hpp  player_factory.hpp  projectile_factory.hpp
game-lib/include/level/: CustomLevelManager.hpp  LevelConfig.hpp  LevelConfigParser.hpp  LevelEntityFactory.hpp
game-lib/include/powerup/: PlayerPowerups.hpp  PowerupCardPool.hpp  PowerupRegistry.hpp
game-lib/include/systems/: cleanup_system.hpp  collision_system.hpp  custom_wave_system.hpp  explosive_system.hpp  input_system.hpp  shooting_system.hpp  system_wrappers.hpp  wave_system.hpp
game-lib/src/entities/: boss_factory.cpp  enemy_factory.cpp  explosion_factory.cpp  player_factory.cpp  projectile_factory.cpp
game-lib/src/level/: CustomLevelManager.cpp  LevelConfigParser.cpp  LevelEntityFactory.cpp
game-lib/src/powerup/: PowerupCardPool.cpp  PowerupRegistry.cpp
game-lib/src/systems/: cleanup_system.cpp  collision_system.cpp  custom_wave_system.cpp  explosive_system.cpp  movement_system.cpp  shooting_system.cpp  wave_system.cpp
game/include/components/: game_components.hpp
game/include/entities/: explosion_factory.hpp  player_factory.hpp
game/include/systems/: movement_system.hpp  shooting_system.hpp
game/src/entities/: enemy_factory.cpp  player_factory.cpp  projectile_factory.cpp
server/: CMakeLists.txt
server/src/: ClientEndpoint.hpp  Game.cpp  Game.hpp  NetworkPacket.hpp  SafeQueue.hpp  UDPServer.cpp  UDPServer.hpp  inputKey.hpp  main.cpp
tests/: CMakeLists.txt  README.md  SETUP_COMPLETE.md  test_doc.md  test_sanity.cpp
tests/admin/: test_admin_complete.cpp
tests/boostrap/: test_entity_reuse.cpp  test_performance.cpp  test_registry.cpp  test_sparse_array.cpp  test_systems.cpp  test_zipper.cpp
tests/client/: test_accessibility.cpp  test_entity.cpp  test_entity_advanced.cpp  test_extrapolation.cpp  test_interpolation.cpp  test_main_client.cpp  test_minimal.cpp  test_queue_advanced.cpp  test_safe_queue.cpp  test_settings_manager.cpp  test_state_manager.cpp
tests/ecs/: test_component.cpp  test_entity.cpp  test_registry.cpp  test_sparse_array.cpp  test_system.cpp
tests/game/: test_client_prediction.cpp  test_collision.cpp  test_collision_components.cpp  test_edge_cases.cpp  test_health.cpp  test_health_advanced.cpp  test_level_manager.cpp  test_main.cpp  test_movement.cpp  test_movement_components.cpp  test_position_history.cpp  test_power_cannon.cpp  test_powerups.cpp  test_shield.cpp  test_spawning.cpp  test_tags.cpp  test_weapon.cpp  test_weapon_advanced.cpp
tests/integration/: test_client_server.cpp  test_multiplayer.cpp
tests/network/: test_compression.cpp  test_full_compression_integration.cpp  test_input_buffer.cpp  test_main_network.cpp  test_opcodes.cpp  test_packet_reliability.cpp  test_protocol.cpp  test_protocol_advanced.cpp  test_serialization.cpp  test_serialization_advanced.cpp  test_serializer_edge_cases.cpp  test_udp_socket.cpp
tests/render/: test_animation.cpp  test_sprite_system.cpp
(+188 files in other folders)
